// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeInformation renders correctly if TradeStatusInfo should not be shown 1`] = `
<View>
  <TradeSeparator />
  <TradeDetails />
</View>
`;

exports[`TradeInformation renders correctly with TradeStatusInfo 1`] = `
<View>
  <TradeSeparator />
  <TradeStatusInfo />
</View>
`;
